<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {Schema::create('questions', function (Blueprint $table) {
        $table->id(); // id
        $table->foreignId('qcm_id')->constrained('qcms')->onDelete('cascade'); // qcm_id
        $table->string('text'); // text
        $table->string('type'); // type
        $table->timestamps();
    });
    
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('questions');
    }
};
